Adjusted tests in src/test after system adjustments